src/app/execs/execs.component.css
/*--services-*/

#services {
  padding: 5em 0;
  background-color: #f4f4f4;
}

.grid {
  width: 100%;
  overflow-x: scroll;
  white-space: nowrap;
  margin: 0 auto;
  padding:2em 0 0em;
  list-style: none;
  text-align: center;
}
.serve-agileinfo {
  display: inline-block;
  /**display: inline;*/
  padding: 0;
  width: 48%;
  margin-right:2%;
}
.serve-agileinfo.two {
  margin-top: 2%;
}
/* Common style */
.grid figure {
  position: relative;
  float: left;
  overflow: hidden;
  margin: 7px 1% 22px 1%;
  height: auto;
  background: #3085a3;
  text-align: center;
  cursor: pointer;
}

.grid figure img {
  position: relative;
  display: block;
  max-width: 100%;
}

.grid figure figcaption {
  padding: 2em;
  color: #fff;
  text-transform: uppercase;
  font-size: 1.25em;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
}

.grid figure figcaption::before,
.grid figure figcaption::after {
  pointer-events: none;
}

.grid figure figcaption,
.grid figure figcaption > a {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
}

/* Anchor will cover the whole item by default */
/* For some effects it will show as a button */
.grid figure figcaption > a {
  z-index: 1000;
  text-indent: 200%;
  white-space: nowrap;
  font-size: 0;
  opacity: 0;
}

.grid figure h4 {
  word-spacing: -0.15em;
  font-weight: 100;
}

.grid figure h4 span {
  font-weight: 100;
  margin-left: 7px;
}

.grid figure h4,
.grid figure p {
  margin: 0;
}

.grid figure p {
  letter-spacing: 1px;
  font-size: 68.5%;
}

/* Individual effects */

figure.effect-julia {
  background: #2f3238;
}

figure.effect-julia img {
  max-width: none;
  -webkit-transition: opacity 1s, -webkit-transform 1s;
  transition: opacity 1s, transform 1s;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  width: 100%;
}

figure.effect-julia figcaption {
  text-align: left;
}

figure.effect-julia h4 {
  position: relative;
  padding: 0.5em 0;
  font-size: 3em;
  letter-spacing: 2px;
}
figure.effect-julia span{
  color:#f16930;
}
figure.effect-julia p {
  display: inline-block;
  margin: 0 0 0.4em;
  padding: 0.5em 1em;
  background: rgba(35, 33, 32, 0.73);
  color: #fff;
  text-transform: none;
  font-weight: 500;
  font-size: 75%;
  -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
  transition: opacity 0.35s, transform 0.35s;
  -webkit-transform: translate3d(-360px,0,0);
  transform: translate3d(-360px,0,0);
}

figure.effect-julia p:first-child {
  -webkit-transition-delay: 0.15s;
  transition-delay: 0.15s;
}

figure.effect-julia p:nth-of-type(2) {
  -webkit-transition-delay: 0.1s;
  transition-delay: 0.1s;
}

figure.effect-julia p:nth-of-type(3) {
  -webkit-transition-delay: 0.05s;
  transition-delay: 0.05s;
}

figure.effect-julia:hover p:first-child {
  -webkit-transition-delay: 0s;
  transition-delay: 0s;
}

figure.effect-julia:hover p:nth-of-type(2) {
  -webkit-transition-delay: 0.05s;
  transition-delay: 0.05s;
}

figure.effect-julia:hover p:nth-of-type(3) {
  -webkit-transition-delay: 0.1s;
  transition-delay: 0.1s;
}

figure.effect-julia:hover img {
  -webkit-transform: scale3d(1.1,1.1,1);
  transform: scale3d(1.1,1.1,1);
}

figure.effect-julia:hover p {
  opacity: 1;
  -webkit-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
}
p.ser-para-wthree {
  padding: 7em 2em 2em 2em;
  background-color: #fff;
  line-height: 1.9em;
  color:#777;
  border-bottom:4px solid #f16930;
}
.gallery {
  padding: 5em 0;
  background-color: #f4f4f4;
}
.da-thumbs {
  list-style: none;
  position: relative;
  margin: 0;
  padding: 0;
}
.da-thumbs li {
  float: left;
  margin: 0.4%;
  padding: 3px;
  position: relative;
  width: 32.4%;
}
.da-thumbs li a,
.da-thumbs li a img {
  display: block;
  position: relative;
  width: 100%;
}
.da-thumbs li a {
  overflow: hidden;
}
.da-thumbs li a div {
  position: absolute;
  background: rgba(17, 17, 17, 0.66);
  width: 100%;
  height: 100%;
}
.da-thumbs li a div p {
  display: block;
  padding: 10px 0;
  margin: 11px 20px 20px 20px;
  font-weight: normal;
  text-transform: capitalize;
  color: rgba(255,255,255,0.9);
  text-align: center;
  font-size: 1em;
  line-height:1.9em;
}
.da-thumbs li a div  h5 {
  color: #FFF;
  font-size: 3em;
  margin: 1em 0 0 0;
  text-align: center;
  text-transform: uppercase;
  letter-spacing: 2px;
}
.da-thumbs li a div  h5 span {
  color: #f16930;
}
.gallery-grids {
  margin-top: 3em;
}

